custom args, task roller rewrite (WORK IN PROGRESS SORT OF, NEEDS A BIT OF TWEAKING I THINK), semi functional