@@ -2,6 +2,8 @@ package com.github.cinnamondev.lifeSeries.gamemodes.TaskGame.Task.PlayerTask;
 
 import com.github.cinnamondev.lifeSeries.LifeSeries;
 import com.github.cinnamondev.lifeSeries.gamemodes.TaskGame.SecretLife;
+import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import io.papermc.paper.command.brigadier.CommandSourceStack;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.translation.GlobalTranslator;
@@ -21,7 +23,7 @@ import java.util.stream.Collectors;
  * `GroupTask`. Internally, the specifc task implementation will be derived from `T`.
  * @param <T>
  */
-public final class GroupTask implements PlayerTask {
+public final class GroupTask extends AbstractPlayerTask {
     //    T getCommon();
     //    Consumer<PlayerTask> getTaskConsumer();
     //    abstract class Builder<T extends Builder<T>> extends PlayerTask.Builder<T> {
@@ -31,139 +33,43 @@ public final class GroupTask implements PlayerTask {
     //            return (T) this;
     //        }
     //    }
-    protected final LifeSeries p;
-    protected final Player owningPlayer;
-    protected final TaskDifficulty difficulty;
-    protected final AbstractSharedGroupTask<?> groupTask;
-    protected final Consumer<PlayerTask> taskConsumer;
+    private final AbstractSharedGroupTask groupTask;
 
-    public GroupTask(LifeSeries p, Player owningPlayer, TaskDifficulty difficulty, Consumer<PlayerTask> taskConsumer, AbstractSharedGroupTask<?> groupTask) {
-        this.p = p;
-        this.owningPlayer = owningPlayer;
-        this.difficulty = difficulty;
-        this.taskConsumer = taskConsumer;
+    public GroupTask(LifeSeries p, Player owningPlayer, AbstractSharedGroupTask groupTask, Consumer<PlayerTask> onTaskCompletion) {
+        super(p, owningPlayer, onTaskCompletion, TaskDifficulty.EXTREME);
         this.groupTask = groupTask;
     }
 
+    Consumer<PlayerTask> getTaskConsumer() { return this.taskConsumer; }
+    public UUID getTaskUUID() { return groupTask.getTaskUUID(); }
+    public AbstractSharedGroupTask getSharedTask() { return this.groupTask; }
     public Collection<Player> getInvolvedPlayers() {
-        return groupTask.getGluedTasks().stream().map(GroupTask::getTaskOwner).collect(Collectors.toList());
+        return groupTask.getGluedTasks().values().stream()
+                .map(AbstractPlayerTask::getTaskOwner)
+                .toList();
     }
 
-    @Override
-    public boolean isTaskRerollable() {
-        return groupTask.isTaskRerollable();
-    }
-
-    @Override
-    public boolean isTaskGuessable() {
-        return groupTask.isTaskGuessable();
-    }
-
-    @Override
-    public String getTaskKey() {
-        return groupTask.getTaskKey();
-    }
-
-    public Consumer<PlayerTask> getTaskConsumer() {
-        return this.taskConsumer;
-    }
-
-    @Override
-    public Player getTaskOwner() {
-        return this.owningPlayer;
-    }
-
-    @Override
-    public ItemStack createTaskBook() {
-        ItemStack book = SecretLife.baseBook(p, 1);
-
-        Component name = GlobalTranslator.render(name(), owningPlayer.locale());
-        ArrayList<Component> pages = descriptionServerTranslate(owningPlayer.locale())
-                .lines()
-                .map(Component::text)
-                .map(TextComponent::asComponent)
-                .collect(Collectors.toCollection(ArrayList::new));
-
-        pages.set(0, name.appendNewline().appendNewline().append(pages.getFirst()));
-        //Component description = GlobalTranslator.render(description(), owningPlayer.locale());
-        book.setItemMeta(((BookMeta) book.getItemMeta()).toBuilder()
-                .author(Component.text("God"))
-                .title(Component.text("Your task."))
-                .pages(pages)
-                .build()
-        );
-        return book;
-    }
-
-
-    @Override
-    public Component taskProgressExplanation() {
-        return groupTask.taskProgressExplanation();
-    }
-
-    @Override
-    public void complete() {
-        groupTask.complete();
-    }
-
-    @Override
-    public void fail() {
-        groupTask.fail();
-    }
-
-    @Override
-    public void cleanup() {
-        groupTask.cleanup();
-    }
-
-    @Override
-    public void endOfSession() {
-        groupTask.endOfSession();
-    }
-
-    @Override
-    public TaskStatus getTaskProgress() {
-        return groupTask.getTaskProgress();
-    }
-
-    @Override
-    public Component lore() {
-        return groupTask.lore();
-    }
-
-    @Override
-    public Component description() {
-        return groupTask.description();
-    }
-
-    @Override
-    public String descriptionServerTranslate(Locale locale) {
-        return groupTask.descriptionServerTranslate(locale);
-    }
-
-    @Override
-    public Component name() {
-        return groupTask.name();
-    }
-
-    @Override
-    public String nameServerTranslate(Locale locale) {
-        return groupTask.nameServerTranslate(locale);
-    }
-
-    @Override
-    public Optional<ConfigurationSection> getConfigurationSection() {
-        return groupTask.getConfigurationSection();
-    }
-
-    @Override
-    public TaskDifficulty getDifficulty() {
-        return this.difficulty;
-    }
-
+    @Override public boolean isTaskRerollable() { return groupTask.isTaskRerollable(); }
+    @Override public boolean isTaskGuessable() { return groupTask.isTaskGuessable();}
+    @Override public String getTaskKey() {return groupTask.getTaskKey(); }
+    @Override public Component taskProgressExplanation() { return groupTask.taskProgressExplanation(); }
+    @Override public void complete() { groupTask.complete(); }
+    @Override public void fail() { groupTask.fail(); }
+    @Override public void cleanup() { groupTask.cleanup(); }
+    @Override public void endOfSession() { groupTask.endOfSession(); }
+    @Override public TaskStatus getTaskProgress() { return groupTask.getTaskProgress(); }
+    @Override public Component lore() { return groupTask.lore(); }
+    @Override public Component description() { return groupTask.description(); }
+    @Override public String descriptionServerTranslate(Locale locale) { return groupTask.descriptionServerTranslate(locale); }
+    @Override public Component name() { return groupTask.name(); }
+    @Override public void acceptGuess() { groupTask.acceptGuess(); }
+    @Override public String nameServerTranslate(Locale locale) { return groupTask.nameServerTranslate(locale); }
+    @Override public Optional<ConfigurationSection> getConfigurationSection() { return groupTask.getConfigurationSection(); }
+    @Override public TaskDifficulty getDifficulty() { return groupTask.getDifficulty(); }
 
     @Override
     public ConfigurationSection saveTask() {
+        groupTask.saveTask(); // TODO
         var playerSection = p.getSave().getConfigurationSection("players");
         if (playerSection == null) {
             playerSection = p.getSave().createSection("players");
@@ -175,24 +81,24 @@ public final class GroupTask implements PlayerTask {
     }
 
     @Override
-    public void acceptGuess() {
-        groupTask.acceptGuess();
-    }
-
-
-    @Override
     public Builder builderProvider() {
         return new Builder();
     }
 
     public static class Builder extends PlayerTask.Builder<Builder> {
-        protected AbstractSharedGroupTask<?> groupTask = null;
-        public Builder task(AbstractSharedGroupTask<?> task) { this.groupTask = task; return this; }
+        protected AbstractSharedGroupTask groupTask = null;
+        public Builder task(AbstractSharedGroupTask task) { this.groupTask = task; return this; }
+
+        @Override
+        public LiteralArgumentBuilder<CommandSourceStack> builderCommand(LifeSeries p, LiteralArgumentBuilder<CommandSourceStack> root, Consumer<PlayerTask> onTaskAdded, Consumer<PlayerTask> onTaskCompletion) {
+            throw new UnsupportedOperationException("GroupTask cannot be directly created!");
+        }
+
         @Override
         public GroupTask build(LifeSeries p) {
             if (groupTask == null) { throw new RuntimeException("grouptask cannot exist without a glue"); }
-            var task = new GroupTask(p, owningPlayer, assignedDifficulty, onTaskCompletion, groupTask);
-            groupTask.getGluedTasks().add(task);
+            var task = new GroupTask(p, owningPlayer, groupTask, onTaskCompletion);
+            groupTask.getGluedTasks().put(owningPlayer.getUniqueId(), task);
             return task;
         }
     }
